<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.learning.tipcalculator.tipcalculator.viewmodel.CalculatorViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:paddingBottom="26dp"
        android:id="@+id/check_inputs"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.TipCalculatorActivity"
        tools:showIn="@layout/activity_tip_calculator">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_check_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/input_check_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.inputCheckAmount}"
                android:hint="@string/input_check_amount_hint"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_tip_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/input_layout_check_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <!--android:text="@={vm.inputTipPercentage}"-->
            <EditText
                android:id="@+id/input_tip_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.inputTipPercentage}"
                android:hint="@string/input_tip_percentage_hint"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/calculation_outputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_tip_percentage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/bill_amount"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.outputCheckAmount}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/bill_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_amount_label_hint"
                    tools:text="Check"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tip_amount"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.outputTipAmount}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tip_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_amount_label_hint"
                    tools:text="Tip"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/grand_total"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.outputTotalDollarAmount}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/grand_total_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_label_hint"
                    tools:text="Total"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/calculation_name"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculation_outputs"
            android:textAlignment="center"
            android:text="@{vm.locationName}"
            tools:text="Veggie Palace" />
    </android.support.constraint.ConstraintLayout>
</layout>
